--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@trpc/react-query": "^10.26.0",
     "@trpc/server": "^10.26.0",
     "axios": "^1.4.0",
+    "body-parser": "^1.20.2",
     "next": "^13.4.2",
     "next-auth": "^4.22.1",
     "react": "18.2.0",
@@ -34,6 +35,7 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.19.2",
     "@types/eslint": "^8.37.0",
     "@types/node": "^18.16.0",
     "@types/react": "^18.2.6",
